site/style.css
body {
    background: rgb(25, 25, 25);
    color: white;
    padding: 0;
    margin: 0;
    font: 1.125em/1.62 "Helvetica", "Helvetica Neue", arial, sans-serif;
}
h1 {
    margin-top: 0;
    font-size: 1.6em;
}
h2 {
    font-size: 1.4em;
    margin: 45px 0 15px;
}
h3 {
    font-size: 0.9em;
    margin: 30px 0 10px;
}

/* block level */
blockquote {
    border-left: 0.4em solid #ddd;
    margin: 15px 0;
    padding: 0 15px;
}
blockquote blockquote {
    padding: 0 0 0 1em;
    margin-left: 2em;
    border-left: 0.4em solid #ddd;
}
p {
    font-weight: normal;
    line-height: 1.8;
    margin: 20px 0;
}

.footnotes { font-size: 90%; }

hr {
    border: none;
    border-bottom: 1px solid #dadada;
}

ul, ol {
    margin: 14px 0;
    padding-left: 30px;
}
ul {
    list-style: square;
}
li ul {
    list-style: disc;
    margin: 8px 0;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    border-color: #333;
}
table tr:nth-child(2n) {
    background: rgba(135, 131, 120, 0.15);
}
table th, table td {
    text-align: left;
    padding: 4px 6px;
}
/* span level */
img {
    max-width: 100%;
}
a {
    color: #bcc5ce;
    overflow: hidden;
    word-wrap: break-word;
    text-decoration: none;
    border-bottom: 1px dotted #ddd;
}

a img {
    vertical-align: middle;
}

/* code */
pre, code, tt {
    font: 0.8em "Menlo", monospace;
    border: 1px solid #333;
    border-radius: 3px;
}
pre {
    margin: 1em 0;
    padding: 8px;
    line-height: 1.5em;
    overflow: auto;
}
code, tt {
    color: #FF5E5E;
    background-color: rgba(135, 131, 120, 0.15);
    border-radius: 3px;
    padding: 1px 3px;
    font-size: 0.75em;
}
pre code {
    padding: 0;
    color: white;
    border: none;
    background: inherit;
    font-size: inherit;
}

::selection {
    background: #FF5E5E;
    color: #fff;
}
header, nav, main, footer {
    max-width: 768px;
    *width: 768px;
    margin: 0 auto;
}
main {
    padding: 20px;
}

h2#brand {
    margin-top: 20px;
    font-size: inherit;
}

h2#brand:before {
    content: "\2190";
}

footer {
    text-align: center;
    padding: 20px;
    margin-bottom: 30px;
    color: #999;
    font-size: 0.75em;
}
footer a {
    margin: 0;
    color: #999;
}

/* article */
main time {
    color: #999;
    font-size: 0.8em;
}

.timeline, .timeline > ul {
    padding: 0;
}

.timeline time {
    margin: 0.1em 0.5em 0.1em 0;
    display: inline-block;
    /* this is just hardcoded based off of the width of some items in Work section
     * using em doesn't work properly
     * if you see this, please help, i have no idea what i'm doing
     * */
    min-width: 69px;
    text-align: right;
}

.timeline li {
    margin: 12px 0;
    list-style: none;
    zoom: 1;
}

.timeline p {
    margin: 0;
    padding: 0;
}

/* syntax highlighting, inspired by base16-bright colors colors copied from my
 * own alacritty config, which are in turn copied from
 * https://github.com/aaron-williamson/base16-alacritty */
.code .builtin, pre .nb, pre .fm {
    color: #fb0120;
}

.code .keyword, pre .k, pre .cp, pre .kd {
    color: #d381c3;
}

.code .literal.string, pre .s2, pre .s {
    color: #a1c659;
}

pre .nd, pre .nf {
    color: #6fb3d2;
}

pre .mi, pre .kc {
    color: #fda331;
}

/* styles used by articles */
.align-left { float: left }
.align-right { float: right }

